--- a/1-入门Pandas.ipynb
+++ b/1-入门Pandas.ipynb
@@ -5579,6 +5579,642 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数据透视表（Pivot Tables）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({'A': ['one', 'one', 'two', 'three'] * 3, \n",
+    "                   'B': ['A', 'B', 'C'] * 4,\n",
+    "                   'C': ['foo', 'foo', 'foo', 'bar', 'bar', 'bar'] * 2,\n",
+    "                   'D': np.random.randn(12),\n",
+    "                   'E': np.random.randn(12)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>one</td>\n",
+       "      <td>A</td>\n",
+       "      <td>foo</td>\n",
+       "      <td>-0.128765</td>\n",
+       "      <td>0.378585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>one</td>\n",
+       "      <td>B</td>\n",
+       "      <td>foo</td>\n",
+       "      <td>1.055798</td>\n",
+       "      <td>0.354544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>two</td>\n",
+       "      <td>C</td>\n",
+       "      <td>foo</td>\n",
+       "      <td>0.893314</td>\n",
+       "      <td>0.212687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>three</td>\n",
+       "      <td>A</td>\n",
+       "      <td>bar</td>\n",
+       "      <td>-1.571037</td>\n",
+       "      <td>0.957992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>one</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bar</td>\n",
+       "      <td>0.615619</td>\n",
+       "      <td>-1.675609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>one</td>\n",
+       "      <td>C</td>\n",
+       "      <td>bar</td>\n",
+       "      <td>0.593122</td>\n",
+       "      <td>0.738242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>two</td>\n",
+       "      <td>A</td>\n",
+       "      <td>foo</td>\n",
+       "      <td>-1.609768</td>\n",
+       "      <td>0.785179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>three</td>\n",
+       "      <td>B</td>\n",
+       "      <td>foo</td>\n",
+       "      <td>0.735100</td>\n",
+       "      <td>-0.103702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>one</td>\n",
+       "      <td>C</td>\n",
+       "      <td>foo</td>\n",
+       "      <td>-2.035285</td>\n",
+       "      <td>0.766321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>one</td>\n",
+       "      <td>A</td>\n",
+       "      <td>bar</td>\n",
+       "      <td>-1.327764</td>\n",
+       "      <td>0.849685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>two</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bar</td>\n",
+       "      <td>0.305761</td>\n",
+       "      <td>0.355968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>three</td>\n",
+       "      <td>C</td>\n",
+       "      <td>bar</td>\n",
+       "      <td>-1.047274</td>\n",
+       "      <td>-0.935064</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        A  B    C         D         E\n",
+       "0     one  A  foo -0.128765  0.378585\n",
+       "1     one  B  foo  1.055798  0.354544\n",
+       "2     two  C  foo  0.893314  0.212687\n",
+       "3   three  A  bar -1.571037  0.957992\n",
+       "4     one  B  bar  0.615619 -1.675609\n",
+       "5     one  C  bar  0.593122  0.738242\n",
+       "6     two  A  foo -1.609768  0.785179\n",
+       "7   three  B  foo  0.735100 -0.103702\n",
+       "8     one  C  foo -2.035285  0.766321\n",
+       "9     one  A  bar -1.327764  0.849685\n",
+       "10    two  B  bar  0.305761  0.355968\n",
+       "11  three  C  bar -1.047274 -0.935064"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "用上述数据生成数据透视表非常简单："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>bar</th>\n",
+       "      <th>foo</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">one</th>\n",
+       "      <th>A</th>\n",
+       "      <td>-1.327764</td>\n",
+       "      <td>-0.128765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>0.615619</td>\n",
+       "      <td>1.055798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>0.593122</td>\n",
+       "      <td>-2.035285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">three</th>\n",
+       "      <th>A</th>\n",
+       "      <td>-1.571037</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.735100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>-1.047274</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">two</th>\n",
+       "      <th>A</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.609768</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>0.305761</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.893314</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "C             bar       foo\n",
+       "A     B                    \n",
+       "one   A -1.327764 -0.128765\n",
+       "      B  0.615619  1.055798\n",
+       "      C  0.593122 -2.035285\n",
+       "three A -1.571037       NaN\n",
+       "      B       NaN  0.735100\n",
+       "      C -1.047274       NaN\n",
+       "two   A       NaN -1.609768\n",
+       "      B  0.305761       NaN\n",
+       "      C       NaN  0.893314"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.pivot_table(df, values='D', index=['A', 'B'], columns=['C'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 时间序列(TimeSeries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pandas 为频率转换时重采样提供了虽然简单易用，但强大高效的功能，如，将秒级的数据转换为 5 分钟为频率的数据。这种操作常见于财务应用程序，但又不仅限于此。详见时间序列。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng = pd.date_range('1/1/2012', periods=100, freq='S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = pd.Series(np.random.randint(0, 500, len(rng)), index=rng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-01-01    26323\n",
+       "Freq: 5T, dtype: int32"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts.resample('5Min').sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "时区表示："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng = pd.date_range('3/6/2012 00:00', periods=5, freq='D')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = pd.Series(np.random.randn(len(rng)), rng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-06    1.012505\n",
+       "2012-03-07    1.857575\n",
+       "2012-03-08    0.168996\n",
+       "2012-03-09   -0.667455\n",
+       "2012-03-10    1.862301\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " ts_utc = ts.tz_localize('UTC')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-06 00:00:00+00:00    1.012505\n",
+       "2012-03-07 00:00:00+00:00    1.857575\n",
+       "2012-03-08 00:00:00+00:00    0.168996\n",
+       "2012-03-09 00:00:00+00:00   -0.667455\n",
+       "2012-03-10 00:00:00+00:00    1.862301\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts_utc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "转换成其它时区："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-05 19:00:00-05:00    1.012505\n",
+       "2012-03-06 19:00:00-05:00    1.857575\n",
+       "2012-03-07 19:00:00-05:00    0.168996\n",
+       "2012-03-08 19:00:00-05:00   -0.667455\n",
+       "2012-03-09 19:00:00-05:00    1.862301\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts_utc.tz_convert('US/Eastern')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "转换时间段："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng = pd.date_range('1/1/2012', periods=5, freq='M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = pd.Series(np.random.randn(len(rng)), index=rng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-01-31    0.239762\n",
+       "2012-02-29    0.188382\n",
+       "2012-03-31   -0.242962\n",
+       "2012-04-30    1.396002\n",
+       "2012-05-31    0.094411\n",
+       "Freq: M, dtype: float64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ps = ts.to_period()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-01    0.239762\n",
+       "2012-02    0.188382\n",
+       "2012-03   -0.242962\n",
+       "2012-04    1.396002\n",
+       "2012-05    0.094411\n",
+       "Freq: M, dtype: float64"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-01-01    0.239762\n",
+       "2012-02-01    0.188382\n",
+       "2012-03-01   -0.242962\n",
+       "2012-04-01    1.396002\n",
+       "2012-05-01    0.094411\n",
+       "Freq: MS, dtype: float64"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps.to_timestamp()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pandas 函数可以很方便地转换时间段与时间戳。下例把以 11 月为结束年份的季度频率转换为下一季度月末上午 9 点："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prng = pd.period_range('1990Q1', '2000Q4', freq='Q-NOV')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = pd.Series(np.random.randn(len(prng)), prng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts.index = (prng.asfreq('M', 'e') + 1).asfreq('H', 's') + 9\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1990-03-01 09:00   -0.415337\n",
+       "1990-06-01 09:00    0.992954\n",
+       "1990-09-01 09:00   -0.726753\n",
+       "1990-12-01 09:00   -0.484364\n",
+       "1991-03-01 09:00    0.774368\n",
+       "Freq: H, dtype: float64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
